tests/ui/async-await/unresolved_type_param.drop_tracking_mir.stderr
error[E0282]: type annotations needed
  --> $DIR/unresolved_type_param.rs:12:5
   |
LL |     bar().await;
   |     ^^^ cannot infer type of the type parameter `T` declared on the function `bar`
   |
help: consider specifying the generic argument
   |
LL |     bar::<T>().await;
   |        +++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
